--- a/data-import/package.json
+++ b/data-import/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "amberflo-metering-typescript": "^2.5.1",
-    "csv": "^6.2.0"
+    "csv": "^6.2.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.17.0"
+    "eslint": "^8.30.0"
   }
 }
